mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-mysql
  namespace: ingress-nginx
  labels:
    app: webserver
spec:
  ports:
  - port: 3306
  selector:
    app: webserver
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-mysql
  namespace: ingress-nginx
  labels:
    app: webserver
spec:
  selector:
    matchLabels:
      app: webserver
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webserver
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
